--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "ioredis": "^5.4.2",
+    "lib0": "^0.2.98",
     "ws": "^8.18.0",
     "yjs": "^13.6.21",
     "zod": "^3.24.1"
