--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "ioredis": "^5.4.2",
     "lib0": "^0.2.98",
     "ws": "^8.18.0",
+    "y-protocols": "^1.0.6",
     "yjs": "^13.6.21",
     "zod": "^3.24.1"
   },
