--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,8 +2,15 @@
   "name": "@mindmapper/types",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint src/",
     "clean": "rm -rf dist"
